[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "kfp-toolbox"
description = "The toolbox for kfp (Kubeflow Pipelines SDK)"
authors = [{ name = "Takahiro Yano", email = "speg03@gmail.com" }]

readme = "README.md"
license = "MIT"

requires-python = ">=3.7"
keywords = ["kfp", "kubeflow", "pipelines"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dynamic = ["version"]

dependencies = [
    "kfp~=1.8",
    "google-cloud-aiplatform~=1.15",
    "typer>=0.4, <1.0",
    "pyyaml>=5.3",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "freezegun"]
docs = ["sphinx", "furo", "sphinx-autobuild"]

[project.scripts]
kfp-toolbox = "kfp_toolbox.cli:app"

[project.urls]
Homepage = "https://speg03.github.io/kfp-toolbox/"
Repository = "https://github.com/speg03/kfp-toolbox"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/kfp_toolbox/_version.py"

[tool.pytest.ini_options]
addopts = "--cov=kfp_toolbox --cov-report=term-missing --cov-report=xml"
